Wrote about dual ecologies

--- a/aalto.bib
+++ b/aalto.bib
@@ -444,6 +444,23 @@
   journal = {Consciousness in the physical world: Perspectives on Russellian monism}
 }
 
+@inproceedings{choiCanYouFeel2016,
+  title = {Can You Feel Me?: {{How}} Embodiment Levels of Telepresence Systems Affect Presence},
+  shorttitle = {Can You Feel Me?},
+  booktitle = {2016 25th {{IEEE International Symposium}} on {{Robot}} and {{Human Interactive Communication}} ({{RO}}-{{MAN}})},
+  author = {Choi, Jung Ju and Kwak, Sonya S.},
+  year = {2016},
+  month = aug,
+  pages = {606--611},
+  publisher = {{IEEE}},
+  address = {{New York, NY, USA}},
+  doi = {10.1109/ROMAN.2016.7745180},
+  abstract = {Since a telepresence system is a system intended to be used in interpersonal communication, conveying the presence of a remote sender is an important issue. Robotic telepresence system is a newer variant of a telepresence system. Even though robot characteristics of having physical embodiment could be effective on building presence of itself, this could yield distortion of presence of a remote sender in telepresence. Thus, in order to determine effective methods of increasing sender presence during telecommunication, we perform a two within-participants experiment, considering the effects of the embodiment levels, by comparing a weakly-embodied telepresence system, a tablet and a strongly-embodied telepresence system, a telepresence robot (number of participants, N = 48). In this study, the participants engage in conversations with a remote sender either through a tablet or a telepresence robot. The results show that participants have a lesser sense of sender presence for a strongly-embodied telepresence system compared to the weakly-embodied telepresence system. On the other hand, participants perceived more presence of a telepresence system toward a strongly-embodied telepresence system than a weakly-embodied telepresence system. The implications of these findings are the weakly-embodied telepresence systems would be effectively used in settings where emotional connection is a priority. In addition, incorporating sensory modalities should be considered for neutralizing the negative effects of strong embodiment on presence.},
+  file = {/home/avnerus/Zotero/storage/2Y773PPP/Choi and Kwak - 2016 - Can you feel me How embodiment levels of telepre.pdf},
+  isbn = {978-1-5090-3929-6},
+  language = {en}
+}
+
 @book{clarksonBattleBotsOfficialGuide2002,
   title = {{{BattleBots}}: {{The Official Guide}}},
   author = {Clarkson, Mark and {Foreword By-Dwyer}, Bill},
@@ -763,6 +780,14 @@
   isbn = {978-952-7131-45-9},
   language = {en},
   note = {OCLC: 1132640219}
+}
+
+@article{erakatHumanitarianLawOperation2014,
+  title = {Humanitarian Law and {{Operation Protective Edge}}: A Survey of Violations and Remedies},
+  author = {Erakat, Noura},
+  year = {2014},
+  volume = {2},
+  journal = {Noref Expert Analysis}
 }
 
 @article{evansUsingComputerTechnology2012,
@@ -1616,6 +1641,22 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   note = {OCLC: ocm51323908}
 }
 
+@article{kayeEmojisInsightsAffordances2017,
+  title = {Emojis: {{Insights}}, {{Affordances}}, and {{Possibilities}} for {{Psychological Science}}},
+  shorttitle = {Emojis},
+  author = {Kaye, Linda K. and Malone, Stephanie A. and Wall, Helen J.},
+  year = {2017},
+  month = feb,
+  volume = {21},
+  pages = {66--68},
+  issn = {13646613},
+  doi = {10.1016/j.tics.2016.10.007},
+  file = {/home/avnerus/Zotero/storage/LCU5NP8H/Kaye et al. - 2017 - Emojis Insights, Affordances, and Possibilities f.pdf},
+  journal = {Trends in Cognitive Sciences},
+  language = {en},
+  number = {2}
+}
+
 @incollection{keatingChallengesConductingInteraction2017,
   title = {Challenges of {{Conducting Interaction}} with {{Technologically Mediated Bodies}}},
   booktitle = {Intercorporeality: {{Emerging Socialities}} in {{Interaction}}},
@@ -1771,6 +1812,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@book{kohCulturalRobotics2016,
+  title = {Cultural {{Robotics}}},
+  editor = {Koh, Jeffrey T.K.V. and Dunstan, Belinda J. and {Silvera-Tawil}, David and Velonaki, Mari},
+  year = {2016},
+  volume = {9549},
+  publisher = {{Springer International Publishing}},
+  address = {{Cham}},
+  doi = {10.1007/978-3-319-42945-8},
+  file = {/home/avnerus/Zotero/storage/HVLEF95H/Koh et al. - 2016 - Cultural Robotics.pdf},
+  isbn = {978-3-319-42944-1 978-3-319-42945-8},
+  language = {en},
+  series = {Lecture {{Notes}} in {{Computer Science}}}
+}
+
 @article{kohringMaterialityTechnologyConstructing2014,
   title = {Materiality, {{Technology}}, and {{Constructing Social Knowledge}} through {{Bodily Representation}}: {{A View}} from {{Prehistoric Guernsey}}, {{Channel Islands}}},
   shorttitle = {Materiality, {{Technology}}, and {{Constructing Social Knowledge}} through {{Bodily Representation}}},
@@ -1821,6 +1876,49 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Universities of Mannheim and Oxford}
 }
 
+@inproceedings{kuwamuraPersonalityDistortionCommunication2012,
+  title = {Personality Distortion in Communication through Teleoperated Robots},
+  booktitle = {2012 {{IEEE RO}}-{{MAN}}: {{The}} 21st {{IEEE International Symposium}} on {{Robot}} and {{Human Interactive Communication}}},
+  author = {Kuwamura, Kaiko and Minato, Takashi and Nishio, Shuichi and Ishiguro, Hiroshi},
+  year = {2012},
+  month = sep,
+  pages = {49--54},
+  publisher = {{IEEE}},
+  address = {{Paris, France}},
+  doi = {10.1109/ROMAN.2012.6343730},
+  abstract = {Recent research has focused on such physical communication media as teleoperated robots, which provide a feeling of being with people in remote places. Recent invented media resemble cute animals or imaginary creatures that quickly attract attention. However, such appearances could distort tele-communications because they are different from human beings. This paper studies the effect on the speaker's personality that is transmitted through physical media by regarding appearances as a function that transmits the speaker's information. Although communication media's capability to transmit information reportedly influences conversations in many aspects, the effect of appearances remains unclear. To reveal the effect of appearance, we compared three appearances of communication media: stuffed-bear teleoperated robot, human-like teleoperated robot, and video chat. Our results show that communication media whose appearance greatly differs from that of the speaker distorts the personality perceived by interlocutors. This paper suggests that the design of the appearance of physical communication media needs to be carefully selected.},
+  file = {/home/avnerus/Zotero/storage/TGGZUZJW/Kuwamura et al. - 2012 - Personality distortion in communication through te.pdf},
+  isbn = {978-1-4673-4606-1 978-1-4673-4604-7 978-1-4673-4605-4},
+  language = {en}
+}
+
+@article{kuzuokaDualEcologiesRobot2004,
+  title = {Dual {{Ecologies}} of {{Robot}} as {{Communication Media}}: {{Thoughts}} on {{Coordinating Orientations}} and {{Projectability}}},
+  author = {Kuzuoka, Hideaki and Yamazaki, Keiichi and Yamazaki, Akiko and Kosaka, Jun'ichi and Suga, Yasuko and Heath, Christian},
+  year = {2004},
+  volume = {6},
+  pages = {8},
+  abstract = {The aim of our study is to investigate systems for supporting remote instruction via a mobile robot. In the real world, instructions are typically given through words and body orientations such as head movements, which make it possible to project others' actions. Projectability is an important resource in organizing multiple actions among multiple participants in co-ordination with one another. It can likewise be said that in the case of robot-human collaboration, it is necessary to design a robot's head so that a local participant can project the robot's (and remote person's) actions. GestureMan is a robot that is designed to support such projectability properties. It is argued that a remote controlled mobile robot, designed as a communication medium, makes relevant dual ecologies: ecology at a remote (robot operator's) site and at a local participant's (robot's) site. In order to design a robot as a viable communication medium, it is essential to consider how these ecologies can be mediated and supported.},
+  file = {/home/avnerus/Zotero/storage/9YM7KCWV/Kuzuoka et al. - 2004 - Dual Ecologies of Robot as Communication Media Th.pdf},
+  language = {en},
+  number = {1}
+}
+
+@inproceedings{kuzuokaMediatingDualEcologies2004,
+  title = {Mediating Dual Ecologies},
+  booktitle = {Proceedings of the 2004 {{ACM}} Conference on {{Computer}} Supported Cooperative Work  - {{CSCW}} '04},
+  author = {Kuzuoka, Hideaki and Kosaka, Jun'ichi and Yamazaki, Keiichi and Suga, Yasuko and Yamazaki, Akiko and Luff, Paul and Heath, Christian},
+  year = {2004},
+  pages = {477},
+  publisher = {{ACM Press}},
+  address = {{Chicago, Illinois, USA}},
+  doi = {10.1145/1031607.1031686},
+  abstract = {In this paper we investigated systems for supporting remote collaboration using mobile robots as communication media. It is argued that the use of a remote-controlled robot as a device to support communication involves two distinct ecologies: an ecology at the remote (instructor's) site and an ecology at the operator's (robot) site. In designing a robot as a viable communication medium, it is essential to consider how these ecologies can be mediated and supported. In this paper, we propose design guidelines to overcome the problems inherent in dual ecologies, and describe the development of a robot named GestureMan-3 based on these guidelines. Our experiments with GestureMan-3 showed that the system supports sequential aspects of the organization of communication.},
+  file = {/home/avnerus/Zotero/storage/XC5GHQ2T/Kuzuoka et al. - 2004 - Mediating dual ecologies.pdf},
+  isbn = {978-1-58113-810-8},
+  language = {en}
+}
+
 @book{labanMasteryMovement1971,
   title = {The {{Mastery}} of {{Movement}}},
   author = {Laban, Rudolf and Ullmann, Lisa},
@@ -1860,6 +1958,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 @misc{leedshackerspaceMakingMachinableWax,
   title = {Making Machinable Wax | {{Leeds Hackspace}}},
   author = {Leeds Hackerspace},
+  language = {en-US}
+}
+
+@misc{leedshackerspaceMakingMachinableWaxa,
+  title = {Making Machinable Wax | {{Leeds Hackspace}}},
+  author = {Leeds Hackerspace},
+  file = {/home/avnerus/Zotero/storage/8UM8SHJK/making-machinable-wax.html},
   language = {en-US}
 }
 
@@ -1935,6 +2040,17 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   lccn = {TJ211.49 .R62 2012},
   note = {OCLC: ocn719429231},
   series = {Intelligent Robotics and Autonomous Agents}
+}
+
+@article{litmanHaaretzInteviewDr2018,
+  title = {{Haaretz inteview with Dr Yael Berda}},
+  author = {Litman, Shani},
+  year = {2018},
+  month = apr,
+  abstract = {***},
+  journal = {הארץ},
+  keywords = {הכניסה,לא,לביטחון,לישראל,מניעת,פלסטינים,קשורה,של},
+  language = {he}
 }
 
 @misc{lockettLastNightSouth2017,
@@ -2328,6 +2444,15 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {3}
 }
 
+@book{murrayInterpretivePhenomenologicalAnalysis2004,
+  title = {An Interpretive Phenomenological Analysis of the Embodiment of Artificial Limbs},
+  author = {Murray, Craig},
+  year = {2004},
+  month = sep,
+  volume = {26},
+  doi = {10.1080/09638280410001696764}
+}
+
 @article{murraySimulationEmotionSynthetic1993,
   title = {Toward the Simulation of Emotion in Synthetic Speech: {{A}} Review of the Literature on Human Vocal Emotion},
   author = {Murray, Iain R. and Arnott, John L.},
@@ -2397,12 +2522,30 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {12}
 }
 
+@misc{ninjatekNinjaTekNinjaFlex2019,
+  title = {{{NinjaTek}} | {{NinjaFlex}}},
+  author = {NinjaTek},
+  year = {2019},
+  file = {/home/avnerus/Zotero/storage/MLZU3CC3/ninjaflex.html},
+  language = {en-US}
+}
+
 @incollection{nishioGeminoidTeleoperatedAndroid2007,
   title = {Geminoid: {{Teleoperated}} Android of an Existing Person},
   booktitle = {Humanoid Robots: {{New}} Developments},
   author = {Nishio, Shuichi and Ishiguro, Hiroshi and Hagita, Norihiro},
   year = {2007},
   publisher = {{IntechOpen}}
+}
+
+@article{novakSentimentEmojis2015,
+  title = {Sentiment of Emojis},
+  author = {Novak, Petra Kralj and Smailovi{\'c}, Jasmina and Sluban, Borut and Mozeti{\v c}, Igor},
+  year = {2015},
+  volume = {10},
+  pages = {e0144296},
+  journal = {PloS one},
+  number = {12}
 }
 
 @article{oconnellUnlawfulKillingCombat2009,
@@ -2441,6 +2584,15 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 
 @article{Omnipresenz,
   title = {Omnipresenz}
+}
+
+@article{oreilly-shahItTimeStart2018,
+  title = {Is It Time to Start Using the Emoji in Biomedical Literature?},
+  author = {{O'Reilly-Shah}, Vikas N. and Lynde, Grant C. and Jabaley, Craig S.},
+  year = {2018},
+  volume = {363},
+  pages = {k5033},
+  journal = {bmj}
 }
 
 @article{pagottoEffectivenessIntergroupContact2010,
@@ -2516,6 +2668,17 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   file = {/home/avnerus/Zotero/storage/RDTN924T/Peled - Soft Robotic Incarnation.pdf},
   language = {en},
   school = {Aalto University}
+}
+
+@book{pelegIsraelPalestiniansConflict2011,
+  title = {Israel's {{Palestinians}}: {{The Conflict Within}}},
+  author = {Peleg, Ilan and Waxman, Dov},
+  year = {2011},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/CBO9780511852022},
+  abstract = {Arguing that a comprehensive and lasting solution to the Israeli-Palestinian conflict depends on a resolution of the Jewish-Palestinian conflict within Israel as much as it does on resolving the conflict between Israel and Palestinians in the Occupied Territories, this timely book explores the causes and consequences of the growing conflict between Israel's Jewish majority and its Palestinian-Arab minority. It warns that if Jewish-Arab relations in Israel continue to deteriorate, this will pose a serious threat to the stability of Israel, to the quality of Israeli democracy and to the potential for peace in the Middle East. The book examines the views and attitudes of both the Palestinian minority and the Jewish majority, as well as the Israeli state's historic approach to its Arab citizens. Drawing upon the experience of other states with national minorities, the authors put forward specific proposals for safeguarding and enhancing the rights of the Palestinian minority while maintaining the country's Jewish identity.},
+  isbn = {978-0-521-76683-8}
 }
 
 @article{peraza-hernandezOrigamiinspiredActiveStructures2014,
@@ -2787,6 +2950,24 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   pmid = {25246403}
 }
 
+@article{royRegenerationAxolotlsModel2008,
+  title = {Regeneration in Axolotls: A Model to Aim For!},
+  shorttitle = {Regeneration in Axolotls},
+  author = {Roy, St{\'e}phane and Gatien, Samuel},
+  year = {2008},
+  month = nov,
+  volume = {43},
+  pages = {968--973},
+  issn = {05315565},
+  doi = {10.1016/j.exger.2008.09.003},
+  abstract = {Urodele amphibians such as the axolotl are the champions of tissue regeneration amongst vertebrates. These animals have mastered the ability to repair and replace most of their tissues following damage or amputation even well into adulthood. In fact it seems that the ability of these organisms to regenerate perfectly is not affected by their age. In addition to being able to regenerate, these animals display a remarkable resistance to cancer. They therefore represent a unique model organism to study regeneration and cancer resistance in vertebrates. The need for this research is even more pressing at the dawn of the 21st century as we are faced with an ever aging world population which has to deal with an increase in organ failure and cancer incidence. Hopefully, this mini review will put in perspective some of the reasons why studying tissue regeneration in salamanders could yield significant knowledge to help regenerative medicine achieve the desired goal of allowing humans to repair and regenerate some of their own tissues as they age.},
+  file = {/home/avnerus/Zotero/storage/UUETY7YN/Roy and Gatien - 2008 - Regeneration in axolotls a model to aim for!.pdf},
+  journal = {Experimental Gerontology},
+  language = {en},
+  note = {Avner},
+  number = {11}
+}
+
 @inproceedings{sabanovicPARORobotAffects2013,
   title = {{{PARO}} Robot Affects Diverse Interaction Modalities in Group Sensory Therapy for Older Adults with Dementia},
   booktitle = {2013 {{IEEE}} 13th {{International Conference}} on {{Rehabilitation Robotics}} ({{ICORR}})},
@@ -3002,6 +3183,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   author = {{SharedStudios}}
 }
 
+@article{sheridanMusingsTelepresenceVirtual1992,
+  title = {Musings on {{Telepresence}} and {{Virtual Presence}}},
+  author = {Sheridan, Thomas B.},
+  year = {1992},
+  month = jan,
+  volume = {1},
+  pages = {120--126},
+  issn = {1054-7460, 1531-3263},
+  doi = {10.1162/pres.1992.1.1.120},
+  file = {/home/avnerus/Zotero/storage/WM93KUDQ/Sheridan - 1992 - Musings on Telepresence and Virtual Presence.pdf},
+  journal = {Presence: Teleoperators and Virtual Environments},
+  language = {en},
+  number = {1}
+}
+
 @article{shintakeSoftPneumaticGelatin2017,
   title = {Soft {{Pneumatic Gelatin Actuator}} for {{Edible Robotics}}},
   author = {Shintake, Jun and Sonar, Harshal and Piskarev, Egor and Paik, Jamie and Floreano, Dario},
@@ -3083,6 +3279,23 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   isbn = {0-7803-8912-3}
 }
 
+@article{smithInterpretativePhenomenologicalAnalysis,
+  title = {Interpretative {{Phenomenological Analysis}}},
+  author = {Smith, Jonathan A and Osborn, Mike},
+  pages = {28},
+  file = {/home/avnerus/Zotero/storage/M4X6QR8F/Smith and Osborn - Interpretative Phenomenological Analysis.pdf},
+  journal = {Qualitative Psychology},
+  language = {en}
+}
+
+@book{smithInterpretativePhenomenologicalAnalysis2009,
+  title = {Interpretative Phenomenological Analysis: {{Theory}}, Method and Research},
+  author = {Smith, Jonathan A. and Flowers, Paul and Larkin, Michael},
+  year = {2009},
+  publisher = {{Sage}},
+  isbn = {1-4462-4325-7}
+}
+
 @incollection{smithPhenomenology2018,
   title = {Phenomenology},
   booktitle = {The {{Stanford Encyclopedia}} of {{Philosophy}}},
@@ -3092,6 +3305,36 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   edition = {Summer 2018},
   publisher = {{Metaphysics Research Lab, Stanford University}},
   abstract = {Phenomenology is the study of structures of consciousness asexperienced from the first-person point of view. The central structureof an experience is its intentionality, its being directed towardsomething, as it is an experience of or about some object. Anexperience is directed toward an object by virtue of its content ormeaning (which represents the object) together with appropriateenabling conditions., Phenomenology as a discipline is distinct from but related to otherkey disciplines in philosophy, such as ontology, epistemology, logic,and ethics. Phenomenology has been practiced in various guises forcenturies, but it came into its own in the early 20th century in theworks of Husserl, Heidegger, Sartre, Merleau-Ponty and others.Phenomenological issues of intentionality, consciousness, qualia, andfirst-person perspective have been prominent in recent philosophy ofmind.}
+}
+
+@misc{smooth-onDragonSkin302019,
+  title = {Dragon {{Skin}}\texttrademark{} 30 {{Product Information}}},
+  author = {{Smooth-On}},
+  year = {2019},
+  abstract = {Addition Cure Silicone Rubber Compound},
+  file = {/home/avnerus/Zotero/storage/K9MWWEJZ/dragon-skin-30.html},
+  howpublished = {https://www.smooth-on.com/products/dragon-skin-30/},
+  journal = {Smooth-On, Inc.},
+  language = {en}
+}
+
+@misc{smooth-onEcoflex0030Product2019,
+  title = {{{Ecoflex}}\texttrademark{} 00-30 {{Product Information}}},
+  author = {{Smooth-On}},
+  year = {2019},
+  abstract = {Super-Soft, Addition Cure Silicone Rubber},
+  file = {/home/avnerus/Zotero/storage/2L34YNGY/ecoflex-00-30.html},
+  howpublished = {https://www.smooth-on.com/products/ecoflex-00-30/},
+  journal = {Smooth-On, Inc.},
+  language = {en}
+}
+
+@misc{smooth-onSilPoxyProductInformation2019,
+  title = {Sil-{{Poxy}}\texttrademark{} {{Product Information}} | {{Smooth}}-{{On}}, {{Inc}}.},
+  author = {{Smooth-On}},
+  year = {2019},
+  file = {/home/avnerus/Zotero/storage/KZ82ZVXV/sil-poxy.html},
+  howpublished = {https://www.smooth-on.com/products/sil-poxy/}
 }
 
 @misc{softroboticstoolkit35RemoveInner2018,
@@ -3162,6 +3405,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Management Science},
   language = {en},
   number = {11}
+}
+
+@book{stallerPreColumbianFoodwaysInterdisciplinary2010,
+  title = {Pre-{{Columbian}} Foodways: Interdisciplinary Approaches to Food, Culture, and Markets in Ancient {{Mesoamerica}}},
+  shorttitle = {Pre-{{Columbian}} Foodways},
+  editor = {Staller, John E. and Carrasco, Michael and {University of Calgary}},
+  year = {2010},
+  publisher = {{Springer}},
+  address = {{New York}},
+  isbn = {978-1-4419-0470-6},
+  keywords = {Antiquities,Central America,Food,Food habits,Indians of Central America,Indians of Mexico,Mexico,Social life and customs},
+  language = {en},
+  lccn = {F1219.3.F64 P74 2010},
+  note = {OCLC: ocn401159388}
 }
 
 @article{stanoInternetSpreadConspiracy2020,
@@ -3326,6 +3583,24 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   journal = {Organizational identity: A reader}
 }
 
+@incollection{tateAxolotlFoodSymbol2010,
+  title = {The Axolotl as Food and Symbol in the Basin of {{Mexico}}, from 1200 {{BC}} to Today},
+  booktitle = {Pre-{{Columbian Foodways}}},
+  author = {Tate, Carolyn E.},
+  year = {2010},
+  pages = {511--533},
+  publisher = {{Springer}},
+  file = {/home/avnerus/Zotero/storage/Z25NJFA6/Staller et al. - 2010 - Pre-Columbian foodways interdisciplinary approach.pdf}
+}
+
+@article{tateKnowledgeSystemsOlmec2008,
+  title = {Knowledge {{Systems}} of the {{Olmec}}},
+  author = {Tate, Carolyn E.},
+  year = {2008},
+  pages = {1203--1212},
+  journal = {Encyclopaedia of the History of Science, Technology, and Medicine in Non-Western Cultures}
+}
+
 @misc{TELEPRESENCE,
   title = {{{TELEPRESENCE}}},
   howpublished = {http://web.media.mit.edu/\textasciitilde{}minsky/papers/Telepresence.html}
@@ -3398,6 +3673,13 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 @misc{UnicodeEmoji2019,
   title = {Unicode {{Emoji}}},
   year = {2019},
+  howpublished = {https://unicode.org/emoji/index.html}
+}
+
+@misc{UnicodeEmoji2019a,
+  title = {Unicode {{Emoji}}},
+  year = {2019},
+  file = {/home/avnerus/Zotero/storage/XQF5Q4ZJ/index.html},
   howpublished = {https://unicode.org/emoji/index.html}
 }
 
@@ -3645,6 +3927,14 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   abstract = {Collaborative problem solving is more important than ever as the problems we try to solve become increasingly complex. Meanwhile, personal and professional communication has moved from face-to-face to computer-mediated environments, but there is little understanding on how the characteristics of these environments affect the quality of interaction and joint problem solving. To develop this understanding, methods are needed for measuring success of collaboration. For this purpose, we created a collaborative block design task intended to evaluate and quantify pair performance. In this task, participants need to share information to complete visuospatial puzzles. Two versions of the task are described: a physical version and one that can be completed in virtual reality. A preliminary study was conducted with the physical version (N = 18 pairs) and the results were used to develop the task for a second study in virtual reality (N = 31 pairs). Performance measures were developed for the task, and we found that pair performance was normally distributed and positively associated with visuospatial skills, but not with other participant-specific background factors. The task specifications are released for the research community to apply and adapt in the study of computer-mediated social interaction.},
   language = {en},
   type = {Under Review}
+}
+
+@misc{WordYear2015,
+  title = {Word of the {{Year}} 2015 | {{Oxford Dictionaries}}},
+  abstract = {Find out more about the 'word' of the year for 2015},
+  file = {/home/avnerus/Zotero/storage/CSSQCQNZ/word-of-the-year-2015.html},
+  howpublished = {https://en.oxforddictionaries.com/word-of-the-year/word-of-the-year-2015},
+  journal = {Oxford Dictionaries | English}
 }
 
 @misc{WorldMostAdvanced,
